--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.1.0",
+    "@fullhuman/vue-cli-plugin-purgecss": "~2.2.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
     "@vue/cli-plugin-babel": "~4.4.0",
@@ -33,10 +35,10 @@
     "imagemin-webp-webpack-plugin": "^3.3.2",
     "imagemin-webpack": "^5.1.1",
     "node-sass": "^4.12.0",
+    "prerender-spa-plugin": "^3.4.0",
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11",
-    "prerender-spa-plugin": "^3.4.0"
+    "vue-template-compiler": "^2.6.11"
   }
 }
