--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
-    "vue-template-compiler": "^2.6.11"
+    "vue-template-compiler": "^2.6.11",
+    "webpack-image-placeholder-loader": "^1.2.0",
+    "webpack-image-resize-loader": "^4.0.2",
+    "webpack-image-srcset-loader": "^5.0.2"
   }
 }
