--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
     "@fullhuman/vue-cli-plugin-purgecss": "~2.2.0",
     "@typescript-eslint/eslint-plugin": "^2.33.0",
     "@typescript-eslint/parser": "^2.33.0",
-    "puppeteer": "^5.2.1",
     "@vue/cli-plugin-babel": "~4.4.0",
     "@vue/cli-plugin-eslint": "~4.4.0",
     "@vue/cli-plugin-pwa": "~4.4.0",
@@ -37,8 +36,10 @@
     "imagemin-webpack": "^5.1.1",
     "node-sass": "^4.12.0",
     "prettier": "^1.19.1",
+    "puppeteer": "^5.2.1",
     "sass-loader": "^8.0.2",
     "typescript": "~3.9.3",
+    "vue-cli-plugin-prerender-spa": "~1.1.6",
     "vue-template-compiler": "^2.6.11",
     "webpack-image-placeholder-loader": "^1.2.0",
     "webpack-image-resize-loader": "^4.0.2",
