--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@types/smooth-scroll": "^16.1.1",
     "bootstrap": "^5.0.1",
     "register-service-worker": "^1.7.1",
+    "smooth-scroll": "^16.1.3",
     "vue": "^2.6.11",
     "vue-class-component": "^7.2.3",
     "vue-property-decorator": "^8.4.2",
